update companyServiceTest , getAllCompany